Correctly set properties on object with statically defined properties

Fix failures in GObject.Object.set_properties() when used with
statically defined properties:

* Calling the method was raising a "SystemError: error return without
exception set" since `result` was (most of the time) still NULL at the
end of pygobject_set_properties()

* Calling the method with several properties would only set one of
the properties, since the function was exiting too early.

Signed-off-by: Simon Feltman <sfeltman@src.gnome.org>

https://bugzilla.gnome.org/show_bug.cgi?id=693618